@@ -1,3 +1,9 @@
+Fri May 20 23:46:44 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ext/socket/{getaddrinfo,getnameinfo}.c: include winsock2.h only when
+	  specified to use winsock2 by user.
+	  this problem is reported by kosaki.
+
 Fri May 20 23:23:45 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/socket.c (make_addrinfo): skip IPv6 addresses when ruby
